--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "npx expo start",
     "tsc": "tsc"
   },
   "dependencies": {
@@ -23,6 +23,8 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native/metro-config": "^0.81.1",
     "@tsconfig/react-native": "^3.0.7",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.13",
